--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,18 @@
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+#display {
+    display: grid;
+    border: 1px solid black;
+    grid-template-columns: repeat(3, 150px);
+    grid-template-rows: repeat(3, 150px);
+}
 
+.board {
+    border: 1px solid black;
+    margin: 0;
+    padding: 0;
+}
